Adciona pacotes 'inputec' e 'babel'

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -1,5 +1,8 @@
 \documentclass{article}
 
+\usepackage[utf8]{inputenc} %Este pacote adciona suporte acentuação
+\usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
+
 \begin{document}
 	Qualquer coisa do tipo
 \end{document}
