--- a/first-doc.tex
+++ b/first-doc.tex
@@ -4,5 +4,9 @@
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
 
 \begin{document}
-	Qualquer coisa do tipo
+	\section[Título pequeno]{Título grand\~ao}
+	\subsection{Título subseção}
+		Texto da subseção
+	\subsubsection{Título de subsubseção}
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 \end{document}
