Adciona pacote 'indentfirst'

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -2,6 +2,7 @@
 
 \usepackage[utf8]{inputenc} %Este pacote adciona suporte acentuação
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
+\usepackage{indentfirst} %Este pacote identa primeiro parágrafo
 
 \begin{document}
 	\section[Título pequeno]{Título grand\~ao}
