Estudo  de formatação de texto. Adciona seções de estudo

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -1,13 +1,60 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage[utf8]{inputenc} %Este pacote adciona suporte acentuação
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
 \usepackage{indentfirst} %Este pacote identa primeiro parágrafo
 
 \begin{document}
+	%%
+	%% 	ESTUDO SEÇÕES
+	%%
 	\section[Título pequeno]{Título grand\~ao}
 	\subsection{Título subseção}
 		Texto da subseção
 	\subsubsection{Título de subsubseção}
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		
+		%Espaço cria novo parágrafo
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		\newpage %quebra página
+
+	%%
+	%%	ESTUDO FORMATAÇÃO TEXTO
+	%%
+	\textbf{Texto em negrito}
+	
+	{\em Texto em ênfase switch em}
+	
+	\textit{Texto em itálico}
+	
+	\underline{Texto sublinhado}
+	
+	\begin{flushright}
+		Texto à direita
+	\end{flushright}
+	
+	\begin{center}
+		Texto centralizado
+	\end{center}
+	
+	\begin{flushleft}
+		Texto à esquerda
+	\end{flushleft}
+	
+	\begin{tiny}
+		texto pequeno \\ %quebra linha
+	\end{tiny}
+	
+	Texto normal \\ %quebra linha
+	
+	{\Huge TEXTO GIGANTE}
+	
+	\newpage
+	
+	%%
+	%%	ESTUDO PARÁGRAFOS
+	%%
+	
+	
 \end{document}
+		
