--- a/first-doc.tex
+++ b/first-doc.tex
@@ -1,16 +1,37 @@
 \documentclass[12pt]{article}
 
+%%&&&&&&&&&&&&&
+%%	PACOTES  &&
+%%&&&&&&&&&&&&&
+
 \usepackage[utf8]{inputenc} %Este pacote adciona suporte acentuação
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
 \usepackage{indentfirst} %Este pacote identa primeiro parágrafo
+\usepackage{setspace} %Este apcote altera espaçamento entre linhas
+
+%%&&&&&&&&&&&&&&&&
+%%	PARÂMETROS  &&
+%%&&&&&&&&&&&&&&&&
+
+%%
+%% PARÁGRAFO
+%%
+\setlength{\parindent}{1.5cm} %Comando altera identação dos parágrafos
+\setlength{\parskip}{1cm} %Comando altera espaçamentos entre parágrafos
+
+
+%%&&&&&&&&&&&&&%%
+%%	DOCUMENTO  &&
+%%&&&&&&&&&&&&&%%
 
 \begin{document}
 	%%
 	%% 	ESTUDO SEÇÕES
 	%%
-	\section[Título pequeno]{Título grand\~ao}
+	\section{Título grand\~ao}
+		Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida. Risus at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut.
 	\subsection{Título subseção}
-		Texto da subseção
+		Volutpat commodo sed egestas egestas fringilla phasellus. Sit amet nisl suscipit adipiscing bibendum est ultricies integer. Blandit libero volutpat sed cras ornare arcu dui vivamus arcu. Facilisis gravida neque convallis a cras semper. Venenatis a condimentum vitae sapien pellentesque habitant. Proin nibh nisl condimentum id venenatis a condimentum. Aliquam sem et tortor consequat id porta nibh. Semper feugiat nibh sed pulvinar. Mi eget mauris pharetra et. Placerat vestibulum lectus mauris ultrices eros in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Convallis aenean et tortor at risus. Aliquet bibendum enim facilisis gravida neque convallis a. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Sapien et ligula ullamcorper malesuada proin.
 	\subsubsection{Título de subsubseção}
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		
@@ -54,6 +75,31 @@
 	%%
 	%%	ESTUDO PARÁGRAFOS
 	%%
+	\section{Seção espaçamento linhas}
+		\doublespacing %Espaçamento duplo entre linhas (até o final do documento)
+		Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida. Risus at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut.
+		
+		\begin{onehalfspace} %modifica espaçamento entre linha de um parágrafo específico
+			Urna duis convallis convallis tellus id. Eget felis eget nunc lobortis mattis aliquam. Eget felis eget nunc lobortis mattis aliquam. Auctor augue mauris augue neque gravida in fermentum. Aliquam sem et tortor consequat id porta nibh venenatis. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Urna nunc id cursus metus aliquam eleifend mi. Sit amet tellus cras adipiscing enim eu turpis. Amet consectetur adipiscing elit pellentesque. Consequat nisl vel pretium lectus quam id leo in vitae.
+		\end{onehalfspace}
+	
+		\space{1.5cm} %Espaçamento personalizado entre linhas
+			Libero volutpat sed cras ornare arcu dui vivamus. Pharetra convallis posuere morbi leo urna molestie. Quis imperdiet massa tincidunt nunc pulvinar sapien. Purus faucibus ornare suspendisse sed nisi. In dictum non consectetur a erat nam. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Varius quam quisque id diam vel quam. Facilisis sed odio morbi quis commodo odio aenean. Ornare arcu odio ut sem nulla. Dictumst quisque sagittis purus sit amet volutpat. Nulla posuere sollicitudin aliquam ultrices.
+			
+		\begin{spacing}{0.5} %Espaçamento perosnalizado entre linhas usando begin|end
+			Pretium viverra suspendisse potenti nullam ac tortor vitae. Duis at consectetur lorem donec massa. Massa tincidunt nunc pulvinar sapien et ligula. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Risus quis varius quam quisque id diam vel quam elementum. At tempor commodo ullamcorper a lacus vestibulum. Interdum velit euismod in pellentesque massa placerat. Feugiat in ante metus dictum at tempor commodo ullamcorper. Sodales ut eu sem integer vitae justo. Magna sit amet purus gravida quis blandit turpis. Porta lorem mollis aliquam ut porttitor leo a diam. Mus mauris vitae ultricies leo integer malesuada. At in tellus integer feugiat. Malesuada fames ac turpis egestas sed tempus urna et pharetra.
+		\end{spacing}
+		
+		\singlespacing %Espaçamento padrão entre linhas (a partir daqui)
+	\subsection{Subsecão Horizontal Space}
+		\hspace{0cm}Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi quis hendrerit dolor magna eget est lorem ipsum. %altera o espaço HORIZONTAL do parágrafo somado ao padrão
+		\hspace{1cm}Sagittis id consectetur purus ut. Iaculis nunc sed augue lacus viverra vitae congue. Adipiscing elit ut aliquam purus. Metus aliquam eleifend mi in nulla posuere. 
+		\hspace{2cm}Amet purus gravida quis blandit. Vel eros donec ac odio tempor orci. Vitae nunc sed velit dignissim sodales ut. Nisl tincidunt eget nullam non.
+		
+	\subsubsection{Subsubseção Vertical Space}
+		\vspace{1.5cm} %altera espaço VERTICAL entre parágrafos somado ao padrão
+		Volutpat commodo sed egestas egestas fringilla phasellus. Sit amet nisl suscipit adipiscing bibendum est ultricies integer. Blandit libero volutpat sed cras ornare arcu dui vivamus arcu. Facilisis gravida neque convallis a cras semper. Venenatis a condimentum vitae sapien pellentesque habitant. Proin nibh nisl condimentum id venenatis a condimentum. Aliquam sem et tortor consequat id porta nibh. Semper feugiat nibh sed pulvinar. Mi eget mauris pharetra et. \vspace{1cm}Placerat vestibulum lectus mauris ultrices eros in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Convallis aenean et tortor at risus. Aliquet bibendum enim facilisis gravida neque convallis a. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Sapien et ligula ullamcorper malesuada proin.
+		
 	
 	
 \end{document}
