Corrige comando \space para \setstrech. Espaçamento entre linhas personalizdo

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -83,8 +83,8 @@
 			Urna duis convallis convallis tellus id. Eget felis eget nunc lobortis mattis aliquam. Eget felis eget nunc lobortis mattis aliquam. Auctor augue mauris augue neque gravida in fermentum. Aliquam sem et tortor consequat id porta nibh venenatis. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Urna nunc id cursus metus aliquam eleifend mi. Sit amet tellus cras adipiscing enim eu turpis. Amet consectetur adipiscing elit pellentesque. Consequat nisl vel pretium lectus quam id leo in vitae.
 		\end{onehalfspace}
 	
-		\space{1.5cm} %Espaçamento personalizado entre linhas
-			Libero volutpat sed cras ornare arcu dui vivamus. Pharetra convallis posuere morbi leo urna molestie. Quis imperdiet massa tincidunt nunc pulvinar sapien. Purus faucibus ornare suspendisse sed nisi. In dictum non consectetur a erat nam. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Varius quam quisque id diam vel quam. Facilisis sed odio morbi quis commodo odio aenean. Ornare arcu odio ut sem nulla. Dictumst quisque sagittis purus sit amet volutpat. Nulla posuere sollicitudin aliquam ultrices.
+		\setstretch{2.5} %Espaçamento personalizado entre linhas
+		Libero volutpat sed cras ornare arcu dui vivamus. Pharetra convallis posuere morbi leo urna molestie. Quis imperdiet massa tincidunt nunc pulvinar sapien. Purus faucibus ornare suspendisse sed nisi. In dictum non consectetur a erat nam. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Varius quam quisque id diam vel quam. Facilisis sed odio morbi quis commodo odio aenean. Ornare arcu odio ut sem nulla. Dictumst quisque sagittis purus sit amet volutpat. Nulla posuere sollicitudin aliquam ultrices.
 			
 		\begin{spacing}{0.5} %Espaçamento perosnalizado entre linhas usando begin|end
 			Pretium viverra suspendisse potenti nullam ac tortor vitae. Duis at consectetur lorem donec massa. Massa tincidunt nunc pulvinar sapien et ligula. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Risus quis varius quam quisque id diam vel quam elementum. At tempor commodo ullamcorper a lacus vestibulum. Interdum velit euismod in pellentesque massa placerat. Feugiat in ante metus dictum at tempor commodo ullamcorper. Sodales ut eu sem integer vitae justo. Magna sit amet purus gravida quis blandit turpis. Porta lorem mollis aliquam ut porttitor leo a diam. Mus mauris vitae ultricies leo integer malesuada. At in tellus integer feugiat. Malesuada fames ac turpis egestas sed tempus urna et pharetra.
