--- a/first-doc.tex
+++ b/first-doc.tex
@@ -7,7 +7,7 @@
 \usepackage[utf8]{inputenc} %Este pacote adciona suporte acentuação
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
 \usepackage{indentfirst} %Este pacote identa primeiro parágrafo
-\usepackage{setspace} %Este apcote altera espaçamento entre linhas
+\usepackage{setspace} %Este pacote altera espaçamento entre linhas
 
 %%&&&&&&&&&&&&&&&&
 %%	PARÂMETROS  &&
@@ -63,10 +63,10 @@
 	\end{flushleft}
 	
 	\begin{tiny}
-		texto pequeno \\ %quebra linha
+		texto pequeno
 	\end{tiny}
 	
-	Texto normal \\ %quebra linha
+	Texto normal
 	
 	{\Huge TEXTO GIGANTE}
 	
