Adciona pacote geometry. Permite alteração das margens do documento

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -7,7 +7,8 @@
 \usepackage[utf8]{inputenc} %Este pacote adciona suporte acentuação
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
 \usepackage{indentfirst} %Este pacote identa primeiro parágrafo
-\usepackage{setspace} %Este apcote altera espaçamento entre linhas
+\usepackage{setspace} %Este pacote altera espaçamento entre linhas
+\usepackage[a4paper, left=1cm, rigth=2cm, top=2cm, bottom=3cm]{geometry} %Este pacote altera margem do documento
 
 %%&&&&&&&&&&&&&&&&
 %%	PARÂMETROS  &&
@@ -63,10 +64,10 @@
 	\end{flushleft}
 	
 	\begin{tiny}
-		texto pequeno \\ %quebra linha
+		texto pequeno 
 	\end{tiny}
 	
-	Texto normal \\ %quebra linha
+	Texto normal
 	
 	{\Huge TEXTO GIGANTE}
 	
