--- a/first-doc.tex
+++ b/first-doc.tex
@@ -8,7 +8,7 @@
 \usepackage[brazil]{babel} %Este pacote traduz comandos para pt-br
 \usepackage{indentfirst} %Este pacote identa primeiro parágrafo
 \usepackage{setspace} %Este pacote altera espaçamento entre linhas
-\usepackage[a4paper, left=1cm, rigth=2cm, top=2cm, bottom=3cm]{geometry} %Este pacote altera margem do documento
+\usepackage[a4paper, left=1cm, right=2cm, top=2cm, bottom=3cm]{geometry} %Este pacote altera margem do documento
 
 %%&&&&&&&&&&&&&&&&
 %%	PARÂMETROS  &&
