--- a/first-doc.tex
+++ b/first-doc.tex
@@ -9,7 +9,10 @@
 \usepackage{indentfirst} %Este pacote identa primeiro parágrafo
 \usepackage{setspace} %Este pacote altera espaçamento entre linhas
 \usepackage[a4paper, left=1cm, right=2cm, top=2cm, bottom=3cm]{geometry} %Este pacote altera margem do documento
-\usepackage{xcolor} %Modifica as cores
+\usepackage[usenames, dvipsnames]{xcolor} %Modifica as cores [pacotes adcionais de cores]
+
+%Cores personalizadas
+\definecolor{minhacorrgb}{RGB}{85,158,131} %define cor personalizada
 
 %%&&&&&&&&&&&&&&&&
 %%	PARÂMETROS  &&
@@ -109,7 +112,7 @@
 	\section{Seção cores}
 	\pagecolor{yellow} %muda cor das páginas da atual em diante
 	\textcolor{red}{Textarium em vermelhus. Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida.} 
-	\colorbox{gray}{ at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut.}
+	\colorbox{SkyBlue}{ at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut.}
 	
 	\newpage
 	
