Cria capa com maketitle

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -31,6 +31,15 @@
 
 \begin{document}
 	%%
+	%%	ESTUDO CAPA E CONTENT
+	%%
+	\title{ESTUDO DE LATEX} %cria título
+	\author{Helio M. Andrade Jr.} %cria autor
+	\date{11 de abril de 2019} %cria data
+	\maketitle %gera título baseado nos parâmetros acima
+	\newpage
+	
+	%%
 	%% 	ESTUDO SEÇÕES
 	%%
 	\section{Título grand\~ao}
