Cria sumário com tableofcontents

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -31,12 +31,18 @@
 
 \begin{document}
 	%%
-	%%	ESTUDO CAPA E CONTENT
+	%%	ESTUDO CAPA
 	%%
 	\title{ESTUDO DE LATEX} %cria título
 	\author{Helio M. Andrade Jr.} %cria autor
 	\date{11 de abril de 2019} %cria data
 	\maketitle %gera título baseado nos parâmetros acima
+	\newpage
+	
+	%%
+	%%	ESTUDO CONTENT
+	%%
+	\tableofcontents
 	\newpage
 	
 	%%
