Melhora aparência da capa

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -33,8 +33,8 @@
 	%%
 	%%	ESTUDO CAPA
 	%%
-	\title{ESTUDO DE LATEX} %cria título
-	\author{Helio M. Andrade Jr.} %cria autor
+	\title{ \textbf{ESTUDO DE LATEX} } %cria título
+	\author{ \textit{Helio M. Andrade Jr.} } %cria autor
 	\date{11 de abril de 2019} %cria data
 	\maketitle %gera título baseado nos parâmetros acima
 	\newpage
