--- a/first-doc.tex
+++ b/first-doc.tex
@@ -32,22 +32,20 @@
 \begin{document}
 	%%
 	%%	ESTUDO CAPA
-	%%
 	\title{ \textbf{ESTUDO DE LATEX} } %cria título
 	\author{ \textit{Helio M. Andrade Jr.} } %cria autor
 	\date{11 de abril de 2019} %cria data
 	\maketitle %gera título baseado nos parâmetros acima
 	%%
 	%% ESTUDO NUMERAÇÃO PÁGINA
-	%%
 	\thispagestyle{empty} %Oculta numeração de páginas
 	\newpage
 	
 	
 	%%
 	%%	ESTUDO CONTENT
-	%%
 	
+	%%%
 	\setcounter{page}{1} %reseta contagem de páginas
 	\pagenumbering{roman} %altera numeração página para algorismo romano (para maiúsculo usar Roman)
 	
@@ -145,7 +143,14 @@
 	Libero volutpat sed cras ornare arcu dui vivamus. Pharetra convallis posuere morbi leo urna molestie. Quis imperdiet massa tincidunt nunc pulvinar sapien. Purus faucibus ornare suspendisse sed nisi. In dictum non consectetur a erat nam. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Varius quam quisque id diam vel quam. Facilisis sed odio morbi quis commodo odio aenean. Ornare arcu odio ut sem nulla. Dictumst quisque sagittis purus sit amet volutpat. Nulla posuere sollicitudin aliquam ultrices.
 	
 	Pretium viverra suspendisse potenti nullam ac tortor vitae. Duis at consectetur lorem donec massa. Massa tincidunt nunc pulvinar sapien et ligula. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Risus quis varius quam quisque id diam vel quam elementum. At tempor commodo ullamcorper a lacus vestibulum. Interdum velit euismod in pellentesque massa placerat. Feugiat in ante metus dictum at tempor commodo ullamcorper. Sodales ut eu sem integer vitae justo. Magna sit amet purus gravida quis blandit turpis. Porta lorem mollis aliquam ut porttitor leo a diam. Mus mauris vitae ultricies leo integer malesuada. At in tellus integer feugiat. Malesuada fames ac turpis egestas sed tempus urna et pharetra.
-
+	
+	\newpage
+	%%
+	%%	ESTUDO LISTAS
+	%%
+	\section{Seção de listas}
+		Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida. Risus at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut:
+		
 	
 \end{document}
 		
