--- a/first-doc.tex
+++ b/first-doc.tex
@@ -138,6 +138,7 @@
 	\textcolor{red}{Textarium em vermelhus. Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida.} 
 	\colorbox{SkyBlue}{ at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut.}
 	
+	
 	\newpage
 	
 	Libero volutpat sed cras ornare arcu dui vivamus. Pharetra convallis posuere morbi leo urna molestie. Quis imperdiet massa tincidunt nunc pulvinar sapien. Purus faucibus ornare suspendisse sed nisi. In dictum non consectetur a erat nam. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Varius quam quisque id diam vel quam. Facilisis sed odio morbi quis commodo odio aenean. Ornare arcu odio ut sem nulla. Dictumst quisque sagittis purus sit amet volutpat. Nulla posuere sollicitudin aliquam ultrices.
@@ -148,9 +149,45 @@
 	%%
 	%%	ESTUDO LISTAS
 	%%
+	\pagecolor{white} %muda cor da página para branco
 	\section{Seção de listas}
-		Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida. Risus at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. Ante in nibh mauris cursus mattis. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut:
+		Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. 
 		
+		Lista não-ordenada:
+		\begin{itemize} % Lista não enumerada
+			\item Primeiro item
+			\item Segundo item
+				\begin{itemize}
+					\item primeiro sub item
+					\item segundo sub item
+						\begin{itemize}
+							\item sub sub item
+						\end{itemize}
+				\end{itemize}
+			\item Terceiro item
+		\end{itemize}
+		
+		Lista ordenada:
+		\begin{enumerate}
+			\item Numerado um
+				\begin{enumerate}
+					\item Subnumerado 1
+						\begin{itemize}
+							\item Item qualquer aí
+						\end{itemize}
+					\item Sumnumerado 2
+				\end{enumerate}
+			\item Numerado dois
+			\item Numerado três
+		\end{enumerate}
 	
+		Lista descritiva:
+		\begin{description}
+			\item[PRIMEIRO] fala alguma coisa sobre o primeiro item
+			\item[SEGUNDO] fala alguma coisa sobre o segundo item
+				\begin{description}
+					\item[Subitem descritivo] mais descrição aqui, eta carai.
+				\end{description}
+		\end{description}
 \end{document}
 		
