Cria secào figuras

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -195,5 +195,12 @@
 					\item[Subitem descritivo] mais descrição aqui, eta carai.
 				\end{description}
 		\end{description}
+	\newpage
+	
+	%%
+	%%	Estudos Figuras
+	%%
+	\section{Seção Figuras}
+		Facilisis sed odio morbi quis commodo odio aenean. Ornare arcu odio ut sem nulla. Dictumst quisque sagittis purus sit amet volutpat. Nulla posuere sollicitudin aliquam ultrices.
 \end{document}
 		
