--- a/first-doc.tex
+++ b/first-doc.tex
@@ -256,5 +256,14 @@
 		\end{wrapfigure}
 	
 		Turpis egestas pretium aenean pharetra magna ac placerat. Sed adipiscing diam donec adipiscing tristique risus nec. Aliquam eleifend mi in nulla posuere sollicitudin aliquam. Sagittis eu volutpat odio facilisis mauris sit. Faucibus vitae aliquet nec ullamcorper sit amet risus. Egestas maecenas pharetra convallis posuere morbi leo. Elementum tempus egestas sed sed risus pretium quam vulputate dignissim. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Malesuada fames ac turpis egestas integer eget aliquet nibh. Sed risus ultricies tristique nulla aliquet. Adipiscing commodo elit at imperdiet dui accumsan. Orci phasellus egestas tellus rutrum tellus pellentesque. Ultricies mi quis hendrerit dolor. Vehicula ipsum a arcu cursus. Arcu bibendum at varius vel pharetra vel. Et tortor at risus viverra adipiscing at in tellus integer. Tincidunt tortor aliquam nulla facilisi cras fermentum odio. Tortor condimentum lacinia quis vel eros donec ac odio tempor.
+		\newpage
+		
+		%%
+		%%	ESTUDO TABELAS
+		%%
+		\section{Seção das tabelas}
+			Orci a scelerisque purus semper eget duis at tellus at. Molestie at elementum eu facilisis sed. Adipiscing tristique risus nec feugiat in fermentum posuere urna. A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Etiam erat velit scelerisque in dictum non. Arcu cursus vitae congue mauris rhoncus aenean. Sed augue lacus viverra vitae congue eu consequat. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et. Hendrerit gravida rutrum quisque non. Et netus et malesuada fames ac turpis egestas maecenas. Id cursus metus aliquam eleifend mi in. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.
+			
+			Pellentesque elit ullamcorper dignissim cras tincidunt. Sit amet volutpat consequat mauris nunc. Odio eu feugiat pretium nibh. Morbi tincidunt augue interdum velit euismod in pellentesque massa placerat. Elementum sagittis vitae et leo. Massa massa ultricies mi quis hendrerit dolor magna. Scelerisque purus semper eget duis at. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Diam vel quam elementum pulvinar. Tincidunt arcu non sodales neque sodales ut etiam. Id neque aliquam vestibulum morbi blandit cursus risus at ultrices. Id porta nibh venenatis cras. Ullamcorper malesuada proin libero nunc. Malesuada fames ac turpis egestas sed tempus urna et. Ultricies mi quis hendrerit dolor magna eget est. Odio aenean sed adipiscing diam donec adipiscing tristique. Egestas pretium aenean pharetra magna ac placerat vestibulum. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
 \end{document}
 		
