Adciona tabela gerada by tablegenerator

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -264,6 +264,18 @@
 		\section{Seção das tabelas}
 			Orci a scelerisque purus semper eget duis at tellus at. Molestie at elementum eu facilisis sed. Adipiscing tristique risus nec feugiat in fermentum posuere urna. A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Etiam erat velit scelerisque in dictum non. Arcu cursus vitae congue mauris rhoncus aenean. Sed augue lacus viverra vitae congue eu consequat. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et. Hendrerit gravida rutrum quisque non. Et netus et malesuada fames ac turpis egestas maecenas. Id cursus metus aliquam eleifend mi in. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.
 			
+			\begin{table}[H]
+				\centering
+				\caption[Legenda curta da tabela]{Legenda longa da tabela}
+				\label{tab:tab1}
+				\begin{tabular}{ l|l|l } % | reprensa as bordas verticais, l (alinhando a esquerda)
+					%\hline %linha horizontal
+					A1 & B1 & C1 \\ \hline 
+					A2 & B2 & C2 \\ \hline
+					A3 & B3 & C3 \\ %\hline
+				\end{tabular}
+			\end{table}
+		
 			Pellentesque elit ullamcorper dignissim cras tincidunt. Sit amet volutpat consequat mauris nunc. Odio eu feugiat pretium nibh. Morbi tincidunt augue interdum velit euismod in pellentesque massa placerat. Elementum sagittis vitae et leo. Massa massa ultricies mi quis hendrerit dolor magna. Scelerisque purus semper eget duis at. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Diam vel quam elementum pulvinar. Tincidunt arcu non sodales neque sodales ut etiam. Id neque aliquam vestibulum morbi blandit cursus risus at ultrices. Id porta nibh venenatis cras. Ullamcorper malesuada proin libero nunc. Malesuada fames ac turpis egestas sed tempus urna et. Ultricies mi quis hendrerit dolor magna eget est. Odio aenean sed adipiscing diam donec adipiscing tristique. Egestas pretium aenean pharetra magna ac placerat vestibulum. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
 \end{document}
 		
