Adciona sumário de tabela

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -55,7 +55,10 @@
 	\tableofcontents %cria sumário
 	\newpage
 	
-	\listoffigures
+	\listoffigures %cria sumário de figuras
+	\newpage
+	
+	\listoftables %cria sumário de tabelas
 	\newpage
 	
 	%%
