Adciona vspace ao enviroment table

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -277,6 +277,7 @@
 					A2 & B2 & C2 \\ \hline
 					A3 & B3 & C3 \\ %\hline
 				\end{tabular}
+				\vspace{-30pt}
 			\end{table}
 		
 			Pellentesque elit ullamcorper dignissim cras tincidunt. Sit amet volutpat consequat mauris nunc. Odio eu feugiat pretium nibh. Morbi tincidunt augue interdum velit euismod in pellentesque massa placerat. Elementum sagittis vitae et leo. Massa massa ultricies mi quis hendrerit dolor magna. Scelerisque purus semper eget duis at. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Diam vel quam elementum pulvinar. Tincidunt arcu non sodales neque sodales ut etiam. Id neque aliquam vestibulum morbi blandit cursus risus at ultrices. Id porta nibh venenatis cras. Ullamcorper malesuada proin libero nunc. Malesuada fames ac turpis egestas sed tempus urna et. Ultricies mi quis hendrerit dolor magna eget est. Odio aenean sed adipiscing diam donec adipiscing tristique. Egestas pretium aenean pharetra magna ac placerat vestibulum. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
