--- a/first-doc.tex
+++ b/first-doc.tex
@@ -324,9 +324,23 @@
 			%%
 			
 			\section{Seção matemática}
-			
+			\subsection{Ambiente de equações}
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Duis at tellus at urna condimentum mattis pellentesque. Tincidunt arcu non sodales neque sodales ut etiam sit. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Bibendum ut tristique et egestas quis ipsum. 
+			Este é uma equação de segundo grau: $ ax^2 +bx +c = 0$. %Equação inline
 			
+			A solução é:
+			\begin{equation} %ambiente de equações numerada
+				x = \frac{-b \pm \sqrt{b^2 -4ac}}{2a}
+			\end{equation}
+			
+			\begin{equation*} %ambiente de equações NÃO numerada
+				x' = \frac{-b + \sqrt{b^2 -4ac}}{2a}
+			\end{equation*}
+			
+			\begin{equation} %ambiente de equações numerada (continuação da contagem)
+				x'' = \frac{-b - \sqrt{b^2 -4ac}}{2a}
+			\end{equation}
+	
 			Etiam erat velit scelerisque in dictum non consectetur a erat. Tellus at urna condimentum mattis pellentesque. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Magnis dis parturient montes nascetur. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. 
 			
 			Porttitor lacus luctus accumsan tortor posuere. Sed risus pretium quam vulputate dignissim suspendisse in est. Nunc vel risus commodo viverra maecenas. Tristique sollicitudin nibh sit amet. Condimentum mattis pellentesque id nibh. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Netus et malesuada fames ac turpis. 
