Estudo de equações em array

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -325,27 +325,35 @@
 			
 			\section{Seção matemática}
 			\subsection{Ambiente de equações}
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Duis at tellus at urna condimentum mattis pellentesque. Tincidunt arcu non sodales neque sodales ut etiam sit. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Bibendum ut tristique et egestas quis ipsum. 
-			Este é uma equação de segundo grau: $ ax^2 +bx +c = 0$. %Equação inline
-			
-			A solução é:
-			\begin{equation} %ambiente de equações numerada
-				x = \frac{-b \pm \sqrt{b^2 -4ac}}{2a}
-			\end{equation}
-			
-			\begin{equation*} %ambiente de equações NÃO numerada
-				x' = \frac{-b + \sqrt{b^2 -4ac}}{2a}
-			\end{equation*}
-			
-			\begin{equation} %ambiente de equações numerada (continuação da contagem)
-				x'' = \frac{-b - \sqrt{b^2 -4ac}}{2a}
-			\end{equation}
-	
-			Etiam erat velit scelerisque in dictum non consectetur a erat. Tellus at urna condimentum mattis pellentesque. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Magnis dis parturient montes nascetur. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. 
-			
-			Porttitor lacus luctus accumsan tortor posuere. Sed risus pretium quam vulputate dignissim suspendisse in est. Nunc vel risus commodo viverra maecenas. Tristique sollicitudin nibh sit amet. Condimentum mattis pellentesque id nibh. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Netus et malesuada fames ac turpis. 
-			
-			 Consectetur lorem donec massa sapien faucibus et molestie ac. Suspendisse in est ante in nibh mauris cursus mattis molestie. Purus gravida quis blandit turpis cursus in hac habitasse platea. Suscipit adipiscing bibendum est ultricies. Viverra adipiscing at in tellus integer feugiat scelerisque. Urna duis convallis convallis tellus id interdum velit laoreet id. Amet justo donec enim diam vulputate. Lectus arcu bibendum at varius. Felis donec et odio pellentesque diam volutpat commodo. Egestas integer eget aliquet nibh. Nec sagittis aliquam malesuada bibendum. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur.
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Duis at tellus at urna condimentum mattis pellentesque. Tincidunt arcu non sodales neque sodales ut etiam sit. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Bibendum ut tristique et egestas quis ipsum. 
+				Este é uma equação de segundo grau: $ ax^2 +bx +c = 0$. %Equação inline
+				
+				A solução é:
+				\begin{equation} %ambiente de equações numerada
+					x = \frac{-b \pm \sqrt{b^2 -4ac}}{2a}
+				\end{equation}
+				
+				\begin{equation*} %ambiente de equações NÃO numerada
+					x' = \frac{-b + \sqrt{b^2 -4ac}}{2a}
+				\end{equation*}
+				
+				\begin{equation} %ambiente de equações numerada (continuação da contagem)
+					x'' = \frac{-b - \sqrt{b^2 -4ac}}{2a}
+				\end{equation}
+				
+				\begin{equation*}
+					\begin{array}{cc}
+						x_1 = \dfrac{-b + \sqrt{b^2 -4ac}}{2a}, & %\dfrac deixa as equações do mesmo tamanho das acimas
+						x_2 = \dfrac{-b + \sqrt{b^2 -4ac}}{2a} \\ 
+					\end{array}
+				\end{equation*} 
+				
+				Etiam erat velit scelerisque in dictum non consectetur a erat. Tellus at urna condimentum mattis pellentesque. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Magnis dis parturient montes nascetur. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. 
+				
+			\subsection{Matrizes}
+				Porttitor lacus luctus accumsan tortor posuere. Sed risus pretium quam vulputate dignissim suspendisse in est. Nunc vel risus commodo viverra maecenas. Tristique sollicitudin nibh sit amet. Condimentum mattis pellentesque id nibh. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Netus et malesuada fames ac turpis. 
+ 
+				Consectetur lorem donec massa sapien faucibus et molestie ac. Suspendisse in est ante in nibh mauris cursus mattis molestie. Purus gravida quis blandit turpis cursus in hac habitasse platea. Suscipit adipiscing bibendum est ultricies. Viverra adipiscing at in tellus integer feugiat scelerisque. Urna duis convallis convallis tellus id interdum velit laoreet id. Amet justo donec enim diam vulputate. Lectus arcu bibendum at varius. Felis donec et odio pellentesque diam volutpat commodo. Egestas integer eget aliquet nibh. Nec sagittis aliquam malesuada bibendum. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur.
 			
 			Tortor at risus viverra adipiscing at in tellus integer feugiat. Varius morbi enim nunc faucibus a pellentesque sit amet. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Eu feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Lacus viverra vitae congue eu consequat ac felis donec. 
 			
