--- a/first-doc.tex
+++ b/first-doc.tex
@@ -349,10 +349,39 @@
 				\end{equation*} 
 				
 				Etiam erat velit scelerisque in dictum non consectetur a erat. Tellus at urna condimentum mattis pellentesque. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Magnis dis parturient montes nascetur. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. 
-				
+				\newpage
 			\subsection{Matrizes}
 				Porttitor lacus luctus accumsan tortor posuere. Sed risus pretium quam vulputate dignissim suspendisse in est. Nunc vel risus commodo viverra maecenas. Tristique sollicitudin nibh sit amet. Condimentum mattis pellentesque id nibh. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Netus et malesuada fames ac turpis. 
- 
+ 				
+ 				Diferentes tipos de matrizes \textbf{matrix} (sem bordas), \textbf{bmatrix} (com chaves), \textbf{pmatrix} (com parênteses), \textbf{vmatrix} (com barras), \textbf{Vmatrix} (barras duplas):
+ 				\begin{equation*}
+ 					\begin{array}{cc}
+	 					\begin{matrix}
+		 					1 & 0 & 0 \\ 
+		 					0 & 1 & 0 \\ 
+		 					0 & 0 & 1
+	 					\end{matrix} &  
+	 					\begin{bmatrix}
+		 					1 & 0 & 0 \\ 
+		 					0 & 1 & 0 \\ 
+		 					0 & 0 & 1
+	 					\end{bmatrix} \\ 
+	 					
+	 					\begin{pmatrix}
+		 					1 & 0 & 0 \\ 
+		 					0 & 1 & 0 \\ 
+		 					0 & 0 & 1
+	 					\end{pmatrix} & 
+	 					\begin{vmatrix}
+		 					1 & 0 & 0 \\ 
+		 					0 & 1 & 0 \\ 
+		 					0 & 0 & 1
+	 					\end{vmatrix} 
+ 					\end{array} 
+ 				\end{equation*} 
+ 				
+ 				
+ 				
 				Consectetur lorem donec massa sapien faucibus et molestie ac. Suspendisse in est ante in nibh mauris cursus mattis molestie. Purus gravida quis blandit turpis cursus in hac habitasse platea. Suscipit adipiscing bibendum est ultricies. Viverra adipiscing at in tellus integer feugiat scelerisque. Urna duis convallis convallis tellus id interdum velit laoreet id. Amet justo donec enim diam vulputate. Lectus arcu bibendum at varius. Felis donec et odio pellentesque diam volutpat commodo. Egestas integer eget aliquet nibh. Nec sagittis aliquam malesuada bibendum. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur.
 			
 			Tortor at risus viverra adipiscing at in tellus integer feugiat. Varius morbi enim nunc faucibus a pellentesque sit amet. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Eu feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Lacus viverra vitae congue eu consequat ac felis donec. 
