Estudo de boas práticas e erros comuns com modo matemático

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -405,5 +405,31 @@
 					\tan{2x^2}
 				\end{equation*}
 				Et egestas quis ipsum suspendisse ultrices. Sed risus pretium quam vulputate. Nec sagittis aliquam malesuada bibendum arcu vitae. Donec ultrices tincidunt arcu non sodales neque sodales ut etiam. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Feugiat in fermentum posuere urna nec. Nunc pulvinar sapien et ligula ullamcorper. Blandit aliquam etiam erat velit scelerisque. Tortor posuere ac ut consequat semper viverra nam libero. Cras adipiscing enim eu turpis egestas. Pharetra magna ac placerat vestibulum lectus mauris ultrices. 
+				
+			\subsection{Boas práticas e erros comuns}
+				Tellus integer feugiat scelerisque varius morbi enim nunc. Quis enim lobortis scelerisque fermentum dui faucibus in ornare. Ultricies mi eget mauris pharetra et ultrices neque ornare. Tellus elementum sagittis vitae et leo duis ut diam. Lobortis feugiat vivamus at augue eget. Dictum varius duis at consectetur lorem donec. Sit amet nisl suscipit adipiscing. Eget velit aliquet sagittis id consectetur purus ut. Platea dictumst quisque sagittis purus sit amet. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. Amet consectetur adipiscing elit ut aliquam purus sit. Volutpat blandit aliquam etiam erat velit scelerisque in. Turpis massa sed elementum tempus egestas.
+				Fraçoes:
+				
+				\begin{equation*}
+					(\frac{2a}{2b})
+				\end{equation*}
+				
+				\begin{equation*}
+					\left( \frac{2a}{2b} \right)
+				\end{equation*}
+				
+				Uso de colchetes:
+				
+				\begin{equation*}
+					{2a + 3b- 4c^2}
+				\end{equation*}
+				
+				\begin{equation*}
+					\{2a + 3b- 4c^2\}
+				\end{equation*}
+				
+				Commodo sed egestas egestas fringilla phasellus. Nulla porttitor massa id neque aliquam vestibulum. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Consequat mauris nunc congue nisi. Morbi leo urna molestie at elementum eu facilisis. Et molestie ac feugiat sed. At imperdiet dui accumsan sit. Diam ut venenatis tellus in metus. Pretium fusce id velit ut tortor pretium viverra. At lectus urna duis convallis convallis tellus. Ultricies tristique nulla aliquet enim tortor at. Nullam vehicula ipsum a arcu cursus vitae. Tempor commodo ullamcorper a lacus vestibulum sed arcu. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Scelerisque varius morbi enim nunc faucibus a pellentesque sit. Nec feugiat in fermentum posuere urna nec tincidunt praesent.
+				
+				Commodo nulla facilisi nullam vehicula. A scelerisque purus semper eget duis at. Enim ut sem viverra aliquet eget sit amet tellus cras. Amet volutpat consequat mauris nunc congue nisi vitae. Amet volutpat consequat mauris nunc. Elementum eu facilisis sed odio morbi quis commodo. Ut placerat orci nulla pellentesque dignissim enim sit. At volutpat diam ut venenatis tellus in metus vulputate. Lorem donec massa sapien faucibus. Et malesuada fames ac turpis. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Urna porttitor rhoncus dolor purus non. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Etiam non quam lacus suspendisse faucibus interdum posuere. Orci dapibus ultrices in iaculis nunc sed augue.
 \end{document}
 		
