Adciona seção bibliografia e citações

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -428,8 +428,20 @@
 					\{2a + 3b- 4c^2\}
 				\end{equation*}
 				
-				Commodo sed egestas egestas fringilla phasellus. Nulla porttitor massa id neque aliquam vestibulum. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Consequat mauris nunc congue nisi. Morbi leo urna molestie at elementum eu facilisis. Et molestie ac feugiat sed. At imperdiet dui accumsan sit. Diam ut venenatis tellus in metus. Pretium fusce id velit ut tortor pretium viverra. At lectus urna duis convallis convallis tellus. Ultricies tristique nulla aliquet enim tortor at. Nullam vehicula ipsum a arcu cursus vitae. Tempor commodo ullamcorper a lacus vestibulum sed arcu. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Scelerisque varius morbi enim nunc faucibus a pellentesque sit. Nec feugiat in fermentum posuere urna nec tincidunt praesent.
 				
-				Commodo nulla facilisi nullam vehicula. A scelerisque purus semper eget duis at. Enim ut sem viverra aliquet eget sit amet tellus cras. Amet volutpat consequat mauris nunc congue nisi vitae. Amet volutpat consequat mauris nunc. Elementum eu facilisis sed odio morbi quis commodo. Ut placerat orci nulla pellentesque dignissim enim sit. At volutpat diam ut venenatis tellus in metus vulputate. Lorem donec massa sapien faucibus. Et malesuada fames ac turpis. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Urna porttitor rhoncus dolor purus non. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Etiam non quam lacus suspendisse faucibus interdum posuere. Orci dapibus ultrices in iaculis nunc sed augue.
+				
+	\newpage
+	%%
+	%%	ESTUDO DE BIBLIOGRAFIA
+	%%
+	\section{EStudo de bibliografia}
+		Commodo sed egestas egestas fringilla phasellus. Nulla porttitor massa id neque aliquam vestibulum. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Consequat mauris nunc congue nisi. Morbi leo urna molestie at elementum eu facilisis. Et molestie ac feugiat sed. At imperdiet dui accumsan sit. Diam ut venenatis tellus in metus. Pretium fusce id velit ut tortor pretium viverra. At lectus urna duis convallis convallis tellus. Ultricies tristique nulla aliquet enim tortor at. Nullam vehicula ipsum a arcu cursus vitae. Tempor commodo ullamcorper a lacus vestibulum sed arcu. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Scelerisque varius morbi enim nunc faucibus a pellentesque sit. Nec feugiat in fermentum posuere urna nec tincidunt praesent.\textbf{\cite{agr_machines}}
+		
+		Commodo nulla facilisi nullam vehicula. A scelerisque purus semper eget duis at. Enim ut sem viverra aliquet eget sit amet tellus cras. Amet volutpat consequat mauris nunc congue nisi vitae. Amet volutpat consequat mauris nunc. Elementum eu facilisis sed odio morbi quis commodo.\textbf{\cite{practical_eletronics}} Ut placerat orci nulla pellentesque dignissim enim sit. At volutpat diam ut venenatis tellus in metus vulputate. Lorem donec massa sapien faucibus. Et malesuada fames ac turpis. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Urna porttitor rhoncus dolor purus non. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Etiam non quam lacus suspendisse faucibus interdum posuere. Orci dapibus ultrices in iaculis nunc sed augue.
+	
+	\newpage
+	
+	\bibliographystyle{apalike}
+	\bibliography{first_bib}
 \end{document}
 		
