uso de \nocite, package natbib

--- a/first_bib.bib
+++ b/first_bib.bib
@@ -15,3 +15,12 @@
 	ISBN = {1937747956},
 	URL = {https://www.amazon.com/Tractor-Innovation-Ground-Breaking-Mechanized-Agriculture/dp/1937747956?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1937747956}
 }
+
+@book{alchemist_pauloc,
+	Author = {Paulo; Translated by Clarke, Alan R. Coelho},
+	Title = {The Alchemist - A Graphic Novel},
+	Publisher = {Harper-one/Harper-collins},
+	Year = {2010},
+	ISBN = {9780007435180},
+
+}
