Inclusão da bibliografia ao sumário

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -442,7 +442,7 @@
 	
 	\newpage
 	
-	
+	\addcontentsline{toc}{section}{Referências}
 	\bibliographystyle{apalike}
 	\bibliography{first_bib}
 	\nocite{alchemist_pauloc}
