Adciona referências ao TOC, comentários aos comandos.

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -442,9 +442,10 @@
 	
 	\newpage
 	
-	\addcontentsline{toc}{section}{Referências}
-	\bibliographystyle{apalike}
-	\bibliography{first_bib}
-	\nocite{alchemist_pauloc}
+	%Adciona bibliografia ao sumário
+	\addcontentsline{toc}{section}{Referências} % toc (TableOfContents), section (hierarquia), Referências (nome no sumário)
+	\bibliographystyle{apalike} %estilo da bibliografia e citações
+	\bibliography{first_bib} %qual bibliografia adcionar as referências
+	\nocite{alchemist_pauloc} %livro de referência não citado
 \end{document}
 		
