Atualização título subseção

--- a/first-doc.tex
+++ b/first-doc.tex
@@ -441,7 +441,7 @@
 		
 		Commodo nulla facilisi nullam vehicula. A scelerisque purus semper eget duis at. Enim ut sem viverra aliquet eget sit amet tellus cras. Amet volutpat consequat mauris nunc congue nisi vitae. Amet volutpat consequat mauris nunc. Elementum eu facilisis sed odio morbi quis commodo.\textbf{\cite{practical_eletronics}} Ut placerat orci nulla pellentesque dignissim enim sit. At volutpat diam ut venenatis tellus in metus vulputate. Lorem donec massa sapien faucibus. Et malesuada fames ac turpis. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Urna porttitor rhoncus dolor purus non. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Etiam non quam lacus suspendisse faucibus interdum posuere. Orci dapibus ultrices in iaculis nunc sed augue.
 		
-		\subsection{Referências de figuras e tabelas}
+		\subsection{Referências de figuras, tabelas, seções e afins}
 			Ipsum dolor sit amet consectetur adipiscing elit. Elementum tempus egestas sed sed risus. Proin nibh nisl condimentum id venenatis a condimentum vitae. Referência de tabela \ref{tab:tab3}. In est ante in nibh mauris cursus. Referência de subseção \ref{subsec:tit_subsec}. Dignissim cras tincidunt lobortis feugiat. Cras semper auctor neque vitae. 
 			
 			Metus dictum at tempor commodo. Sit amet est placerat in egestas erat imperdiet sed euismod. Ultrices tincidunt arcu non sodales neque sodales ut. Consequat interdum varius sit amet mattis vulputate enim. Metus aliquam eleifend mi in nulla posuere. Citação de figuras, figura \ref{fig:birb02}Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Non pulvinar neque laoreet suspendisse interdum consectetur libero. Lectus urna duis convallis convallis tellus. Morbi tristique senectus et netus et malesuada fames. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. At ultrices mi tempus imperdiet. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Egestas pretium aenean pharetra magna ac placerat.
