Atualização dos arquivos

--- a/slides/first_slide.tex
+++ b/slides/first_slide.tex
@@ -53,7 +53,9 @@
 			Bloco de texto aleatório 3 
 		\end{block}
 	\end{frame}
-
+	
+	%%	ESTUDO PAUSAS
+	%%
 	\begin{frame}
 		\frametitle{Slide de lista ordenada}
 		Texto qualquer falando sobre algo
@@ -132,7 +134,7 @@
 			\end{itemize}
 		\end{block}
 	\end{frame}
-	
+
 \end{document}
 	
 	
